--- a/.tmuxinator/sails.yml
+++ b/.tmuxinator/sails.yml
@@ -22,6 +22,7 @@ windows:
   - bash:
   - emacs: emacs -nw
   - sails:
+  - brain: cd ~/ubiBrain/ubismart-platform-lab/
 #  - editor:
 #      layout: main-vertical
 #      panes:
