Minor updates after switch to zsh.

--- a/.tmuxinator/oms.yml
+++ b/.tmuxinator/oms.yml
@@ -19,7 +19,7 @@ root: ~/greeny-oms/
 # tmux_command: byobu
 
 windows:
-  - bash:
+  - shell:
   - emacs: emacs -nw
   - sails:
   - ubi: cd ~/ubismart/
