--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,6 @@ bind -n S-Right next-window
 # THEME
 set -g status-bg black
 set -g status-fg white
-set -g window-status-current-bg white
+set -g window-status-current-bg blue
 set -g window-status-current-fg black
 set -g window-status-current-attr bold
